version=0.10.2. Lots of work on better unit tests. Stable csv file validation.